Upgrade content-tutorial-repo to SDK 3.0.0.